# compraventavalledeuco

./: HEROKU_BACKUP_SETUP.md  HEROKU_SETUP.md  README.md  app.py  backup_state.json  config_local.py  incremental_backup_config.json  models.py  pyproject.toml  requirements.txt  routes.py  run_local.py
backup_system/: GUIA_RAPIDA_BACKUP.md  README_BACKUP_SYSTEM.md  __init__.py  backup_config.json  backup_installer.py  backup_integration.py  backup_monitor.py  backup_monitor_config.json  backup_scheduler.py  backup_state.json  backup_system.py  backup_web_interface.py  cloud_backup.py  ejemplo_integracion_app.py  health_report_20250912_233053.txt  heroku_backup_adapter.py  incremental_backup.py  incremental_backup_config.json  restore_system.py
backups/: backup_manual_20250912_232142_manifest.json
instance/: vehicle_marketplace.db
static/css/: style.css
static/js/: main.js
templates/: admin_add_gestor.html  admin_backup_dashboard.html  admin_dashboard.html  admin_edit_gestor.html  admin_gestores.html  admin_pending_requests.html  admin_sidebar.html  admin_users_vehicles.html  base.html  client_request.html  edit_client_request.html  edit_vehicle.html  gestores.html  index.html  login.html  terms_conditions.html  vehicle_detail.html
